Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51993

Canvas3D and three.js does not work using QQuickWidget inside QMdiArea since 5.6

XMLWordPrintable

    • 1f4862ef5db138e9dcefe1ebc16df3e054200775

      When running the Canvas3D and using the three.js API inside a QMdiArea using a QQuickWidget, it does not work anymore since 5.6 release, got the following debug messages
      qrc:/three.js:34720: TypeError: Property 'resize' of object [object Object] is not a function
      qml: Canvas3DRenderer: trying to use 0 texture units while this GPU supports only 0
      qml: Canvas3DRenderer: trying to use 1 texture units while this GPU supports only 0
      qml: Canvas3DRenderer: trying to use 2 texture units while this GPU supports only 0
      qml: Canvas3DRenderer: trying to use 3 texture units while this GPU supports only 0
      qrc:/three.js:34720: TypeError: Property 'resize' of object [object Object] is not a function

      Repeated over and over again.
      This works perfectly with Qt 5.5, something has happened since 5.6 release.

      I attach a modified version of the "oneqt" example that reproduces this issue.
      NOTE: I have only tested on Linux - Ubuntu 15.10 so far.

        For Gerrit Dashboard: QTBUG-51993
        # Subject Branch Project Status CR V

            andysh Andy Shaw
            bennysj Benny Sjöstrand
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes